# Basic-Fortran-Wrapping

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
Source/C/: CMakeLists.txt  DistributedArray_c.h
Source/CPlusPlus/: CMakeLists.txt  DistributedArray.cc  DistributedArray.h
Source/Fortran/: CMakeLists.txt  DistributedArrayModule.f90
Source/Swig/: CMakeLists.txt  FWSwig.i
Source/Wrapper/: CMakeLists.txt  DistributedArray_wrp.f90
Targets/: K.cmake  Mac.cmake  Spring.cmake
UnitTests/: CMakeLists.txt
UnitTests/C/: CMakeLists.txt  main.c
UnitTests/CPlusPlus/: CMakeLists.txt  main.cc
UnitTests/Fortran/: CMakeLists.txt  main.f90
UnitTests/Python/: CMakeLists.txt  test.py.in
