FIND_PACKAGE(SWIG 3.0)

if (SWIG_FOUND)
  INCLUDE(${SWIG_USE_FILE})

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Source/CPlusPlus)
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Source/C)

  SET(CMAKE_SWIG_FLAGS "")

  set(Swigsrc
    FWSwig.i
  )

  foreach(file ${Swigsrc})
    SET_SOURCE_FILES_PROPERTIES(${file} PROPERTIES CPLUSPLUS ON)
  endforeach(file)
  set(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
  SWIG_ADD_LIBRARY(FWSwig LANGUAGE python SOURCES ${Swigsrc})
  SWIG_LINK_LIBRARIES(FWSwig FWCPP FWWrapper FW ${PYTHON_LIBRARIES})
  set_target_properties(_FWSwig PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/python
    LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/python
  )
endif()
